--- a/src/style.css
+++ b/src/style.css
@@ -5189,7 +5189,7 @@ div.line-chart .chart-legend li {
   height: 350px;
   overflow: hidden;
   border-radius: 42% 56% 72% 28% / 42% 42% 56% 48%;
-  background: url(./images/logo_image.jpg);
+  background: url(./images/animation_image.jpeg);
   background-size: cover;
   background-position: center;
   box-shadow: 0 0 35px green;
